Java 21 support
Native emojis support. No longer requires the buggy library and all latest emojis are available.

Virtual threads where possible.